src/Microsoft.Health.Fhir.Liquid.Converter.UnitTests/TestData/TestTemplates/InvalidValidateTemplates/InvalidNoneJsonContent.liquid
{% validate "Schemas/TestSchema.schema.json" -%}
"invalidJsonBlock"
{% endvalidate -%}
